gaso/public/stylesheets/style.styl
/* MIXINS */
box-shadow()
  -webkit-box-shadow arguments
  -moz-box-shadow arguments
  box-shadow arguments

border-radius()
  -webkit-border-radius arguments
  -moz-border-radius arguments
  border-radius arguments
/* /MIXINS */

/* NAVIGATION BAR */
// Custom jQM icons
.ui-icon-drop
  background url("../images/drop18.png") no-repeat rgba(0, 0, 0, 0.4) !important
/* /NAVIGATION BAR */

/* MOBILE DEBUGGING */
#debug
  position fixed
  top 0
  left 0
  right 0
  z-index 1000
  font-size 10px
  line-height 10px
  opacity .7
  background white
  min-height 50px
  max-height 100px
  overflow-y scroll
  -webkit-overflow-scrolling touch
  border-bottom 1px solid gray
  em
    font-weight bold

/* COMMON */
.ui-page
  // Tryomg tp get rid of jquerymobile page flicker.
  // NOTE: This might cause problems with Android form inputs
  // (see comments in https://github.com/jquery/jquery-mobile/issues/455)
  -webkit-backface-visibility hidden

size = 50
stations = abc shell nesteoil seo teboil st1 question
.ui-icon-station
  //margin 1em
  width (size)px
  height (size)px
  box-shadow 0 0 10px #222
  
for s in stations
  .ui-icon-{s}
    path = "../images/stationlogos/%s_%s.png" % (s size)
    background url(path) no-repeat
    background-size 100%

.ui-icon-centermap
  background url("../images/center.png") no-repeat !important

.distance-direct
  background url("../images/distance_direct_16.png") no-repeat
  padding-left 22px
.distance-drive
  background url("../images/car_16.png") no-repeat
  padding-left 22px

.ui-custom-hidden
  display none

.clear
  clear both

// Slider-related styles
#ranking-slider
  margin 0
  padding 5px 0
  height 35px

  div
    position absolute

  #filterslider
    left 68px
    right 84px

  .slidericon
    &.money
      top 2px
      left 3px
    &.distance
      top 3px
      right 8px

  // Hide text box from slider. Can't be done with jqm parameters.
  .ui-slider-input
    display none

  div.ui-slider
    margin 0
    width 100%
    padding 5px 0
  .ui-slider-handle
    width 50px
    top -3px
    margin 0 -25px

#footer
  // Remove ugly green border
  border none
  // add a top 'gleam' effect to make footer look a bit nicer
  border-top 1px solid #aaa
/* /COMMON */

/* LIST PAGE */
#page-list
  @media screen and (max-width: 480px) and (orientation: portrait)
    .ui-select .ui-icon
      right 20px
  

  #fueltypes
    .ui-btn
    .ui-select
      margin 0px 5px 2px

  .ui-listview-filter 
    margin-top 10px


  li.ui-btn
    min-height 73px

    .ui-link-inherit
      padding-left 70px

    .ui-icon-station
      margin 0
      top .7em
      left .7em

    .ui-li-desc
      margin 0 0 0 .5em
      padding 0
      float left
    .station-info-name
      float none

    .station-info-price
    .station-info-distance
      line-height 20px

    .station-info-name
    .currency
      font-weight bold

    .currency
      font-size 16px
      padding-right .3em

    .price-value
    .distance-direct
    .distance-drive
    .fuel-type
      vertical-align top
      padding-right .5em

    .fuel-type
      color gray
  
  li.ui-li-divider
    // Our dividers act as content toggles -> add some height to make them easier click targets.
    height 30px
    line-height 30px
    min-height 20px

/* /LIST PAGE */



/* MAP PAGE */
/*
#page-map
#map-canvas
#page-map .ui-content
  // Fill screen
  width 100%
  height 100%
  padding 0
  min-height 380px
  min-width 280px
*/
#map-canvas
  position absolute !important
  width 100%
  height 100%
  top 0
  left 0

#page-map #map-buttons
  position: absolute;
  top: 30px;
  right: 15px;

/* /MAP PAGE */


/* SEARCH PAGE */
#page-search
  form
    padding 1em
/* /SEARCH PAGE */


/* STATION MAP PAGE */
#page-station-map
#station-map-canvas
#page-station-map .ui-content
  // Fill screen
  width 100%
  height 100%
  padding 0
  min-height 380px
  min-width 280px
/* /STATION MAP PAGE */


/* MENU PAGE */
#page-menu
  background #333
/* /MENU PAGE */

/* STATION PAGE */
#station-details
  #small-map-canvas
    width 100%
    padding 0
    height 180px

  .distance-direct
    background url("../images/distance_direct_24.png") no-repeat
    padding-left 30px
  .address
    float right

  #prices
    .timeago-info
      position relative
      right 16%
      text-align right
      //float right
      font-size 80%
      font-style italic
      color gray
    @media screen and (max-width: 480px) and (orientation: portrait)
      .timeago-info
        right 0
        float right

  #comments
    margin-top 1em

    #ownid
      font-weight bold
    #list-comments
      list-style-type: none
/* /STATION PAGE */


/* iPads (portrait and landscape) */
//@media screen and (min-device-width : 768px) and (max-device-width : 1024px)

/* iPads (landscape)  */
//@media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape)

/* iPads (portrait)  */
//@media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait)

